--- a/9/lib/sparky-aptus-appcenter/desktops.html
+++ b/9/lib/sparky-aptus-appcenter/desktops.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: October 22, 2025 by pavroo
+Last update: November 16, 2025 by pavroo
 -->
 	<head>
 		<title>Desktops | APTus AppCenter</title>
@@ -62,14 +62,16 @@ Last update: October 22, 2025 by pavroo
 		</td>
 		<td><a href="aptus://environment_gnome-shell" class="button1"><img src="images0/gnome.png" class="appicon"><br />GNOME Shell</a>
 		</td>
+		<td><a href="aptus://environment_hyprland" class="button1"><img src="images/desktop.svg" class="appicon"><br />Hyprland</a>
+		</td>
 		<td><a href="aptus://environment_i3" class="button1"><img src="images0/i3.png" class="appicon"><br />i3</a>
 		</td>
 		<td><a href="aptus://environment_icewm" class="button1"><img src="images0/icewm.png" class="appicon"><br />IceWM</a>
 		</td>
-		<td><a href="aptus://environment_jwm" class="button1"><img src="images0/jwm.png" class="appicon"><br />JWM</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://environment_jwm" class="button1"><img src="images0/jwm.png" class="appicon"><br />JWM</a>
+		</td>
 		<td><a href="aptus://environment_kde" class="button1"><img src="images0/kde.png" class="appicon"><br />KDE Plasma</a>
 		</td>
 		<td><a href="aptus://environment_lumina" class="button1"><img src="images0/lumina.png" class="appicon"><br />Lumina</a>
@@ -80,10 +82,10 @@ Last update: October 22, 2025 by pavroo
 		</td>
 		<td><a href="aptus://environment_mate" class="button1"><img src="images0/mate.png" class="appicon"><br />MATE</a>
 		</td>
-		<td><a href="aptus://environment_mlvwm" class="button1"><img src="images/desktop.svg" class="appicon"><br />MLVWM</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://environment_mlvwm" class="button1"><img src="images/desktop.svg" class="appicon"><br />MLVWM</a>
+		</td>
 		<td><a href="aptus://environment_nscde" class="button1"><img src="images0/nscde.png" class="appicon"><br />NsCDE</a>
 		</td>
 		<td><a href="aptus://environment_openbox" class="button1"><img src="images0/openbox.png" class="appicon"><br />Openbox</a>
@@ -94,10 +96,10 @@ Last update: October 22, 2025 by pavroo
 		</td>
 		<td><a href="aptus://environment_sway" class="button1"><img src="images0/sway.png" class="appicon"><br />Sway</a>
 		</td>
-		<td><a href="aptus://environment_sugar" class="button1"><img src="images0/sugar.svg" class="appicon"><br />Sugar</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://environment_sugar" class="button1"><img src="images0/sugar.svg" class="appicon"><br />Sugar</a>
+		</td>
 		<td><a href="aptus://environment_trinity" class="button1"><img src="images0/tde.png" class="appicon"><br />Trinity</a>
 		</td>
 		<td><a href="aptus://environment_ukui" class="button1"><img src="images0/ukui.png" class="appicon"><br />UKUI</a>
