--- a/8/lib/sparky-aptus-appcenter/net-communication.html
+++ b/8/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 12, 2025 by pavroo
+Last update: December 9, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -62,14 +62,14 @@ Last update: August 12, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
 		</td>
-		<td><a href="aptus://netcom_fagram" class="button1"><img src="images/telegram.svg" class="appicon"><br />FAgram</a>
-		</td>
+		<!--<td><a href="aptus://netcom_fagram" class="button1"><img src="images/telegram.svg" class="appicon"><br />FAgram</a>
+		</td>-->
 		<td><a href="aptus://netcom_finch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Finch</a>
+		</td>
+		<td><a href="aptus://netcom_forkgram" class="button1"><img src="images/telegram.svg" class="appicon"><br />Forkgram</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netcom_forkgram" class="button1"><img src="images/telegram.svg" class="appicon"><br />Forkgram</a>
-		</td>
 		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
 		</td>
 		<td><a href="aptus://netcom_gajim" class="button1"><img src="images/gajim.svg" class="appicon"><br />Gajim</a>
@@ -80,10 +80,10 @@ Last update: August 12, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
 		</td>
 		<td><a href="aptus://netcom_jami" class="button1"><img src="images/jami.svg" class="appicon"><br />Jami</a>
@@ -94,12 +94,12 @@ Last update: August 12, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_kvirc" class="button1"><img src="images/irc.svg" class="appicon"><br />KVIrc</a>
 		</td>
-	</tr>
-	<tr>
 		<!--<td><a href="aptus://netcom_linphone-desktop" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
 		</td>-->
 		<td><a href="aptus://netcom_mangler" class="button1"><img src="images/phone.svg" class="appicon"><br />Mangler</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_materialgram" class="button1"><img src="images/telegram.svg" class="appicon"><br />Materialgram</a>
 		</td>
 		<td><a href="aptus://netcom_mumble" class="button1"><img src="images/im.svg" class="appicon"><br />Mumble</a>
@@ -110,10 +110,10 @@ Last update: August 12, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_quaternion" class="button1"><img src="images/im.svg" class="appicon"><br />Quaternion</a>
 		</td>
 		<td><a href="aptus://netcom_rocketchat" class="button1"><img src="images/im.svg" class="appicon"><br />Rocket.Chat</a>
@@ -124,10 +124,10 @@ Last update: August 12, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_teams-for-linux" class="button1"><img src="images/teams-for-linux.svg" class="appicon"><br />Teams for Linux</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://webextra_teamspeak" class="button1"><img src="images/im.svg" class="appicon"><br />TeamSpeak Installer</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_telegram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Telegram Desktop</a>
 		</td>
 		<td><a href="aptus://netcom_thelounge" class="button1"><img src="images/irc.svg" class="appicon"><br />The Lounge</a>
@@ -138,10 +138,10 @@ Last update: August 12, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_tokodon" class="button1"><img src="images/im.svg" class="appicon"><br />Tokodon</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_weechat" class="button1"><img src="images/im.svg" class="appicon"><br />WeeChat</a>
 		</td>
 		<td><a href="aptus://netcom_wasistlos" class="button1"><img src="images/whatsapp.svg" class="appicon"><br />Wasistlos</a>
