--- a/9/lib/sparky-aptus-appcenter/net-communication.html
+++ b/9/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 16, 2025 by pavroo
+Last update: December 9, 2025 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -62,14 +62,14 @@ Last update: November 16, 2025 by pavroo
 		</td>
 		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
 		</td>
-		<td><a href="aptus://netcom_fagram" class="button1"><img src="images/telegram.svg" class="appicon"><br />FAgram</a>
-		</td>
+		<!--<td><a href="aptus://netcom_fagram" class="button1"><img src="images/telegram.svg" class="appicon"><br />FAgram</a>
+		</td>-->
 		<td><a href="aptus://netcom_finch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Finch</a>
+		</td>
+		<td><a href="aptus://netcom_forkgram" class="button1"><img src="images/telegram.svg" class="appicon"><br />Forkgram</a>
 		</td>
 	</tr>
 	<tr>
-		<!--<td><a href="aptus://netcom_forkgram" class="button1"><img src="images/telegram.svg" class="appicon"><br />Forkgram</a>
-		</td>-->
 		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
 		</td>
 		<td><a href="aptus://netcom_gajim" class="button1"><img src="images/gajim.svg" class="appicon"><br />Gajim</a>
